--- a/style.css
+++ b/style.css
@@ -119,10 +119,10 @@ box-sizing : border-box;
     50% { opacity: 1;}
     100% {  opacity: 0;}
 }
-@keyframes fadein05 {
-    0% { opacity: 0;}
-  100%{opacity: 1;}
-}
+  @keyframes fadein05 {
+      0% { opacity: 0;}
+    100%{opacity: 1;}
+  }
 /*以下遅延の指定*/
 .txt01 {animation-delay: 1s;}
 .txt02 {animation-delay: 4s;}
@@ -187,6 +187,7 @@ a{
   position: relative;
   bottom: -20px;
   width: 130px;
+  padding: 30px;
 }
 .top-inc{
   display: table;
