--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 @charset "UTF-8";
 /* CSS Document */
+*{
+  margin:0;
+  padding: 0;
+}
+html,body{
+  height: 100%;
+}
+#wrapper{
+  width: 100%;
+  position:relative;
+  min-height: 100%;
+}
+
 body{
 font-feature-settings: "palt";
 letter-spacing: .12em;
@@ -232,6 +245,7 @@ dt:hover{
   display: table;
 }
 .top-contact{
+  display: none;
   font-size: 28px;
   padding: 15px 0;
   -webkit-box-sizing: border-box;
@@ -514,7 +528,8 @@ form{
   background-position: center center;
   background-size: cover;
   height: 400px;
-  display: flex;
+  display: none;
+/*  display: flex;*/
   align-items: center;
   justify-content: center;
   min-height: 450px;
@@ -823,6 +838,7 @@ outline
   box-sizing: border-box;
   justify-content: space-between;
   width: 100%;
+  bottom: 0;
 }
 .footer-title{
   color: #000000;
@@ -885,6 +901,13 @@ small{
  width: 100%;
  height: auto;
  }
+  /*タブレット、スマホの場合*/
+.pc	{
+  display:none!important; 
+  }
+.sp { 
+  display:block!important; 
+  }
 /****************************
 *
 *main
@@ -1070,6 +1093,7 @@ small{
   .txt2{
     width: 100%;
     padding: 10px;
+    font-size: 16px;
     box-sizing: border-box;
   }
 .service{
@@ -1200,7 +1224,7 @@ outline
 }
   .outline-main{
   margin: 0 auto;
-  padding: 20px 20px 60px 20px;
+  padding: 20px;
   width: 100%;
   font-size: 16px;
   line-height: 2em;
